RESOLVED FIXED77548
Web Inspector: debugger reports wrong sources when paused in inline script on page reload
https://bugs.webkit.org/show_bug.cgi?id=77548
Summary Web Inspector: debugger reports wrong sources when paused in inline script on...
Yury Semikhatsky
Reported 2012-02-01 05:52:52 PST
1. Open attached file. 2. Open inspector. 3. Reload the page. Result: When clicking on call frames wrong source line is revealed.
Attachments
Test page (278 bytes, text/html)
2012-02-01 06:02 PST, Yury Semikhatsky
no flags
Patch (7.26 KB, patch)
2012-02-01 08:27 PST, Yury Semikhatsky
no flags
Patch (9.16 KB, patch)
2012-02-01 08:38 PST, Yury Semikhatsky
vsevik: review+
Yury Semikhatsky
Comment 1 2012-02-01 06:02:41 PST
Created attachment 124939 [details] Test page
Yury Semikhatsky
Comment 2 2012-02-01 08:27:11 PST
Yury Semikhatsky
Comment 3 2012-02-01 08:38:54 PST
Yury Semikhatsky
Comment 4 2012-02-01 09:03:40 PST
Pavel Podivilov
Comment 5 2012-02-01 09:05:13 PST
Comment on attachment 124956 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=124956&action=review Looks good! > Source/WebCore/bindings/v8/DebuggerScript.js:95 > + endLine += 1; nit: Consider adding 1 to lineCount instead to match the comment.
Note You need to log in before you can comment on or make changes to this bug.